--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.1.0",
     "odoo-xmlrpc": "^1.0.7",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+    "request-promise": "^4.2.4",
+    "async-sema": "^3.0.1"
   }
 }
