--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   apiflectra:
     build: .
     environment:
-      - FLECTRA_DEPLOY_URL=${FLECTRA_DEPLOY_URL}
-      - FLECTRA_DEPLOY_PORT=${FLECTRA_DEPLOY_PORT}
-      - FLECTRA_DEPLOY_DB=${FLECTRA_DEPLOY_DB}
-      - FLECTRA_DEPLOY_USERNAME=${FLECTRA_DEPLOY_USERNAME}
-      - FLECTRA_DEPLOY_PASSWORD=${FLECTRA_DEPLOY_PASSWORD}
+      - URL=${URL}
+      - PORT=${PORT}
+      - DB=${DB}
+      - USER_NAME=${USER_NAME}
+      - PASSWORD=${PASSWORD}
